ZumZumFinancials_Dev1/src/objects/VAT_Return__c.object
<CustomObject>
    <fields>
        <fullName>Box_1__c</fullName>
        <label>Box 1</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Box_2__c</fullName>
        <label>Box 2</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Box_3__c</fullName>
        <label>Box 3</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Calculated__c</fullName>
        <label>Date Calculated</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_From__c</fullName>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Posted__c</fullName>
        <label>Date Posted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_To__c</fullName>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_posted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trans_No__c</fullName>
        <label>Trans. No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>VAT Return</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>VAT Return Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VAT Return</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>